samples/errors/multiply_booleans.lox
// Error: Cannot multiply booleans
// expect: runtime error
print true * false;
